# aurora-orm

./: .dockerignore  .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  LICENSE.md  README.md  RELEASING.md  moon.yml  package.json  railway.json  rustfmt.toml  tsconfig.json
.github/: actionlint.yaml  release-please-config.json
.github/workflows/: ci.yml  cli-build.yml  release-please.yml  release.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: node.yml  rust.yml  tag-wasm.yml
aureline-cli/: Cargo.toml  moon.yml
aureline-cli/src/: cmd_migrate.rs  diagnostics.rs  main.rs
aureline-codegen/: Cargo.toml  moon.yml
aureline-codegen/src/: lib.rs
aureline-config/: Cargo.toml  moon.yml
aureline-config/src/: lib.rs
aureline-core/: Cargo.toml  moon.yml
aureline-core/src/: ast.rs  aureline.pest  convert.rs  error.rs  grammar.rs  lib.rs  schema_index.rs  surql.rs  validate.rs
aureline-core/src/check/: context.rs  keywords.rs  mod.rs  range.rs  recovery.rs  rules.rs  syntax.rs
aureline-core/src/emit/: mod.rs  naming.rs  surql.rs
aureline-core/src/semantic/: error.rs  mod.rs
aureline-core/src/semantic/analysis/: analyzers.rs  context.rs  default_attr.rs  functions.rs  mod.rs  surql.rs  symbols.rs  types.rs
aureline-core/src/semantic/diagnostics/: analysis.rs  attributes.rs  mod.rs  render.rs  suggestions.rs
aureline-core/src/semantic/lowering/: assertions.rs  attributes.rs  default.rs  flexible.rs  fulltext.rs  hnsw.rs  indexes.rs  mod.rs  permissions.rs
aureline-core/tests/: check.rs  definitions.rs  emit_tests.rs  index_definitions.rs  parse_tests.rs  schema_index.rs  semantic.rs  surql_tests.rs  types_test.rs  validate_tests.rs
aureline-core/tests/check/: analyzer.rs  attributes.rs  common.rs  duplicate_detection.rs  field.rs  recovery.rs  report_debug.rs  table.rs  validation.rs
aureline-core/tests/definitions/: compound_index.rs  default_attr.rs  fulltext_index.rs  table_field_index.rs  vector_index.rs
aureline-core/tests/semantic/: analyzers.rs  attributes.rs  common.rs  fulltext.rs  functions.rs  indexes.rs  pipeline.rs  surql.rs  symbols.rs  types.rs  vector.rs
aureline-docs/: Dockerfile  README.md  moon.yml  package-lock.json  package.json  source.config.ts  vite.config.ts
aureline-docs/content/docs/: cli.mdx  configuration.mdx  getting-started.mdx  index.mdx  meta.json  syntax.mdx
aureline-docs/grammars/: README.md  aureline.tmLanguage.json
aureline-docs/public/: install.ps1  install.sh
aureline-docs/scripts/: patch-bun-output.ts
aureline-docs/src/components/: cli-install.tsx  mdx.tsx
aureline-docs/src/lib/: shared.ts
aureline-docs/src/routes/: __root.tsx  index.tsx
aureline-docs/src/styles/: app.css
aureline-lsp/: Cargo.toml  moon.yml
aureline-lsp/src/: main.rs
aureline-migrate/: Cargo.toml  moon.yml
aureline-migrate/src/: change.rs  error.rs  fs_io.rs  generate.rs  journal.rs  lib.rs  ops.rs  render.rs  schema.rs
aureline-migrate/src/apply/: client.rs  env.rs  mod.rs  tracking.rs
aureline-migrate/src/diff/: analyzer.rs  field.rs  index.rs  mod.rs  order.rs  pair.rs  table.rs
aureline-migrate/src/plan/: mod.rs  risk.rs
aureline-migrate/src/snapshot/: canonical.rs  mod.rs  v1.rs
aureline-migrate/tests/: analyzer.rs  attributes.rs  fields.rs  fs_io.rs  generate.rs  journal.rs  migration_tests.rs  snapshots.rs  tables.rs
aureline-migrate/tests/attributes/: full_text_search.rs  index.rs  unique.rs  vector_search.rs
aureline-migrate/tests/common/: mod.rs
aureline-test-support/: Cargo.toml
aureline-test-support/src/: lib.rs
aureline-tree-sitter/: README.md  grammar.js  moon.yml  package.json  tree-sitter.json
aureline-tree-sitter/examples/: showcase.aureline
aureline-tree-sitter/examples/basics/: types.aureline
aureline-tree-sitter/examples/commands-test/: surql-escape-hatch.aureline
aureline-tree-sitter/examples/indexes/: block-indexes.aureline
aureline-tree-sitter/examples/realistic/: product-app.aureline
aureline-tree-sitter/src/: grammar.json  node-types.json  parser.c
aureline-tree-sitter/test/corpus/: tables.txt
aureline-zed/: Cargo.toml  README.md  extension.toml  moon.yml
aureline-zed/languages/aureline/: config.toml  indents.scm  (+1 more)
aureline-zed/scripts/: setup.ts
aureline-zed/src/: lib.rs
aurora-cli/: Cargo.toml  moon.yml
aurora-cli/src/: cmd_migrate.rs  diagnostics.rs  main.rs
aurora-codegen/: Cargo.toml  moon.yml
aurora-codegen/src/: lib.rs
aurora-config/: Cargo.toml  moon.yml
aurora-config/src/: lib.rs
aurora-core/: Cargo.toml  moon.yml
aurora-core/src/: ast.rs  aurora.pest  convert.rs  error.rs  grammar.rs  lib.rs  surql.rs  validate.rs
aurora-core/src/check/: classifiers.rs  context.rs  diagnostics.rs  keywords.rs  mod.rs  range.rs  recovery.rs  report.rs  rules.rs  source.rs  syntax.rs
aurora-core/src/emit/: naming.rs  surql.rs
aurora-core/tests/: check.rs  check_tests.rs  emit_tests.rs  parse_tests.rs  types_test.rs  validate_tests.rs
aurora-core/tests/check/: analyzer.rs  attributes.rs  common.rs  diagnostics.rs  field.rs  recovery.rs  report_debug.rs  table.rs  validation.rs
aurora-docs/: README.md  moon.yml  package.json  source.config.ts
aurora-docs/grammars/: README.md  aurora.tmLanguage.json
aurora-lsp/: Cargo.toml  moon.yml
aurora-lsp/src/: main.rs
aurora-migrate/: Cargo.toml  moon.yml
aurora-migrate/src/: diff.rs  error.rs  fs_io.rs  generate.rs  lib.rs  ops.rs  render.rs  snapshot.rs
aurora-migrate/src/apply/: env.rs  mod.rs  tracking.rs
aurora-migrate/src/diff/: analyzer.rs  field.rs  index.rs  mod.rs  pair.rs  table.rs
aurora-migrate/src/snapshot/: canonical.rs  mod.rs  v1.rs
aurora-migrate/tests/: migration_tests.rs
aurora-tree-sitter/: README.md  grammar.js  moon.yml  package.json  tree-sitter.json
aurora-tree-sitter/examples/: showcase.aurora
aurora-tree-sitter/queries/: highlights.scm
aurora-tree-sitter/src/: grammar.json  node-types.json  parser.c
aurora-zed/: .gitignore  Cargo.toml  README.md  extension.toml  moon.yml
aurora-zed/scripts/: setup.ts
aurora-zed/src/: lib.rs
(+29 files in other folders)
