[workspace]
resolver = "3"
members = [
  "aureline-cli",
  "aureline-codegen",
  "aureline-config",
  "aureline-core",
  "aureline-lsp",
  "aureline-migrate",
]
exclude = ["aureline-zed"]

[workspace.package]
version = "0.1.0-dev.2"
edition = "2024"
license = "UNLICENSED"
publish = false
repository = "https://github.com/pixelscortex/aureline-orm"

[workspace.dependencies]
aureline-codegen = { path = "aureline-codegen", version = "=0.1.0-dev.2" }
aureline-config = { path = "aureline-config", version = "=0.1.0-dev.2" }
aureline-core = { path = "aureline-core", version = "=0.1.0-dev.2" }
aureline-migrate = { path = "aureline-migrate", version = "=0.1.0-dev.2" }
