[workspace]
resolver = "3"
members = [
  "aureline-cli",
  "aureline-codegen",
  "aureline-config",
  "aureline-core",
  "aureline-lsp",
  "aureline-migrate",
  "aureline-test-support",
]
exclude = ["aureline-zed"]

[workspace.package]
version = "0.1.0-dev.3"
edition = "2024"
license = "MIT"
publish = true
repository = "https://github.com/pixelscortex/aureline-orm"

[workspace.dependencies]
aureline-codegen = { path = "aureline-codegen", version = "=0.1.0-dev.3" }
aureline-config = { path = "aureline-config", version = "=0.1.0-dev.3" }
aureline-core = { path = "aureline-core", version = "=0.1.0-dev.3" }
aureline-migrate = { path = "aureline-migrate", version = "=0.1.0-dev.3" }
aureline-test-support = { path = "aureline-test-support" }
