[package]
name = "aureline-cli"
description = "Internal Aureline CLI proof of concept."
version = "0.1.0-dev.2"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "aureline"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aureline-core.workspace = true
aureline-migrate.workspace = true
codespan-reporting = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }
