[package]
name = "aureline-config"
description = "Shared `aureline.toml` config schema and loader for Aureline tools."
version = "0.1.0-dev.4"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
