[package]
name = "aureline-core"
description = "Internal Aureline language parser and serializable AST."
version = "0.1.0-dev.2"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
from-pest = "0.3"
pest = "2.8"
pest-ast = "0.3"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb-core = { version = "2.6.5", default-features = false }
thiserror = "2"
