[package]
name = "aureline-core"
description = "Aureline schema language parser, validator, emitter, and serializable AST."
version = "0.1.0-dev.5"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
from-pest = "0.3"
pest = "2.8"
pest-ast = "0.3"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb-core = { version = "3.1.0-beta.3", default-features = false }
thiserror = "2"

[dev-dependencies]
aureline-test-support.workspace = true
