[package]
name = "aureline-lsp"
description = "Language server for the Aureline schema language."
version = "0.1.0-dev.4"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "aureline-lsp"
path = "src/main.rs"

[dependencies]
aureline-core.workspace = true
serde_json = "1"
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
