[package]
name = "aurora-core"
description = "Internal Aurora language parser and serializable AST."
version = "0.0.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[dependencies]
from-pest = "0.3"
pest = "2.8"
pest-ast = "0.3"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb-core = { version = "2.6.5", default-features = false }
thiserror = "2"
