[package]
name = "aurora-lsp"
description = "Language server for the Aurora schema language."
version = "0.0.0"
edition = "2024"
publish = false
license = "UNLICENSED"

[[bin]]
name = "aurora-lsp"
path = "src/main.rs"

[dependencies]
aurora-core = { path = "../aurora-core" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
