[package]
name = "aurora-migrate"
version = "0.1.0"
edition = "2024"
publish = false
license = "UNLICENSED"

[dependencies]
aurora-config = { path = "../aurora-config" }
aurora-core = { path = "../aurora-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "0.8"

# Apply pipeline (talks to a live SurrealDB via the official SDK).
surrealdb = { version = "2", default-features = false, features = ["protocol-http", "protocol-ws", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
